# TestForm

./: .gitignore  README.md  browsers.json  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  capabilities.py  url.py
fixtures/: __init__.py  random_data.py
pages/: index_page.py
qase/: __init__.py  docs.py
src/pages/: __init__.py  index_page.py  my_page_factory.py
tests/: conftest.py  main.py  test_index_page.py
utils/: __init__.py  blok_try.py  name_skrin.py  random_data.py
